--- a/shared/logging/pom.xml
+++ b/shared/logging/pom.xml
@@ -3,13 +3,13 @@
     xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
   <modelVersion>4.0.0</modelVersion>
   <parent>
-    <groupId>com.utkarsh.design_patterns</groupId>
-    <artifactId>creational</artifactId>
+    <groupId>com.utkarsh</groupId>
+    <artifactId>shared</artifactId>
     <version>1.0-SNAPSHOT</version>
   </parent>
-  <artifactId>singleton</artifactId>
-  <packaging>jar</packaging>
-  <name>singleton</name>
+  <groupId>com.utkarsh.shared</groupId>
+  <artifactId>logging</artifactId>
+  <name>logging</name>
   <url>http://maven.apache.org</url>
   <dependencies>
     <dependency>
@@ -19,9 +19,15 @@
       <scope>test</scope>
     </dependency>
     <dependency>
-      <groupId>com.utkarsh.shared</groupId>
-      <artifactId>logging</artifactId>
-      <version>1.0-SNAPSHOT</version>
+      <groupId>org.slf4j</groupId>
+      <artifactId>slf4j-api</artifactId>
+      <version>2.0.17</version>
+    </dependency>
+    <dependency>
+      <groupId>ch.qos.logback</groupId>
+      <artifactId>logback-classic</artifactId>
+      <version>1.5.18</version>
+      <scope>compile</scope>
     </dependency>
   </dependencies>
 </project>
